[gd_scene load_steps=9 format=3 uid="uid://bsh1gxe1kclhm"]

[ext_resource type="Script" path="res://scripts/New_Slime.gd" id="1_icbq3"]
[ext_resource type="Texture2D" uid="uid://d2smcb1g2tts1" path="res://assets/sprites/slime_purple.png" id="2_u71fq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1joml"]
atlas = ExtResource("2_u71fq")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq4n7"]
atlas = ExtResource("2_u71fq")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hv6m"]
atlas = ExtResource("2_u71fq")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ty8vd"]
atlas = ExtResource("2_u71fq")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_uq8k8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1joml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq4n7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hv6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ty8vd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t0xix"]
size = Vector2(10, 12)

[node name="New_Slime" type="Node2D"]
script = ExtResource("1_icbq3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_uq8k8")
autoplay = "default"
frame_progress = 0.934197

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(2, 5)
target_position = Vector2(9, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-1, 5)
target_position = Vector2(-10, 0)

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_t0xix")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
